core/src/hir/snapshots/diplomat_core__hir__type_context__tests__callback_borrowing_fails_with_unsafe_borrows.snap
---
source: core/src/hir/type_context.rs
expression: output
---
Diplomat error: Lowering error in Foo::apply_callback_owned_slice
> Cannot return owned slices from callbacks

Diplomat error: Lowering error in Foo::apply_callback_borrowed_struct
> Cannot return references to structs from callbacks
