core/src/hir/snapshots/diplomat_core__hir__type_context__tests__callback_result_option_wrap_fails.snap
---
source: core/src/hir/type_context.rs
expression: output
---
Diplomat error: Lowering error in MyStruct::takes_callback
> Result<Option<MyStruct>, Option<MyStruct>> wraps Option<MyStruct>; MyStruct is not an opaque. Please use DiplomatOption<MyStruct> instead.

Diplomat error: Lowering error in SomeTrait::xyz
> Result<Option<MyStruct>, Option<MyStruct>> wraps Option<MyStruct>; MyStruct is not an opaque. Please use DiplomatOption<MyStruct> instead.
