core/src/hir/snapshots/diplomat_core__hir__type_context__tests__ffi_errors.snap
---
source: core/src/hir/type_context.rs
expression: output
---
Diplomat error: Lowering error in SomeTrait::returns_nullable_not_okay
> Backend trait return types are fallible. Return type must either be a `-> Result<T, E>` or `-> ()`. See https://rust-diplomat.github.io/diplomat/attrs/fallible_trait_returns.html for more.

Diplomat error: Lowering error in SomeTrait::returns_fallible_unit_not_okay
> Found non #[diplomat::attr(*, ffi_error)] marked error type in trait return. See https://rust-diplomat.github.io/diplomat/attrs/fallible_trait_returns.html for more.

Diplomat error: Lowering error in SomeTrait::returns_fallible_struct_not_okay
> Found non #[diplomat::attr(*, ffi_error)] marked error type in trait return. See https://rust-diplomat.github.io/diplomat/attrs/fallible_trait_returns.html for more.

Diplomat error: Lowering error in SomeTrait::returns_fallible_unmarked_enum_not_okay
> Found non #[diplomat::attr(*, ffi_error)] marked error type in trait return. See https://rust-diplomat.github.io/diplomat/attrs/fallible_trait_returns.html for more.

Diplomat error: Lowering error in SomeTrait::returns_fallible_primitive_not_okay
> Found non #[diplomat::attr(*, ffi_error)] marked error type in trait return. See https://rust-diplomat.github.io/diplomat/attrs/fallible_trait_returns.html for more.
