core/src/hir/snapshots/diplomat_core__hir__type_context__tests__opaque_checks_with_error.snap
---
source: core/src/hir/type_context.rs
expression: output
---
Diplomat error: Lowering error in OpaqueStruct::new
> Opaque passed by value in input: OpaqueStruct

Diplomat error: Lowering error in OpaqueStruct::get_i32
> Method `OpaqueStruct_get_i32` takes an opaque by value as the self parameter, but opaques as inputs must be behind refs
