core/src/hir/snapshots/diplomat_core__hir__type_context__tests__opaque_ffi.snap
---
source: core/src/hir/type_context.rs
expression: output
---
Diplomat error: Lowering error in MyOpaqueEnum::new_broken
> Opaque passed by value in input: MyOpaqueEnum

Diplomat error: Lowering error in MyOpaqueEnum::do_thing_broken
> Method `MyOpaqueEnum_do_thing_broken` takes an opaque by value as the self parameter, but opaques as inputs must be behind refs

Diplomat error: Lowering error in MyOpaqueStruct::new_broken
> Opaque passed by value in input: MyOpaqueStruct

Diplomat error: Lowering error in MyOpaqueStruct::do_thing_broken
> Method `MyOpaqueStruct_do_thing_broken` takes an opaque by value as the self parameter, but opaques as inputs must be behind refs
