core/src/hir/snapshots/diplomat_core__hir__type_context__tests__option.snap
---
source: core/src/hir/type_context.rs
expression: output
---
Diplomat error: Lowering error in BrokenStruct
> In field regular_option: Option<u8> is FFI-unsafe, consider using DiplomatOption<u8>
Diplomat error: Lowering error in BrokenStruct
> Found Option<T> for primitive T in a struct field, please use DiplomatOption<T>
Diplomat error: Lowering error in BrokenStruct
> In field regular_option: Option<CustomStruct> is FFI-unsafe, consider using DiplomatOption<CustomStruct>
Diplomat error: Lowering error in BrokenStruct
> Found Option<T> for struct/enum T in a struct field, please use DiplomatOption<T>
Diplomat error: Lowering error in Foo::diplo_option_ref
> found DiplomatOption<&T>, please use Option<&T> (DiplomatOption is for primitives, structs, and enums)
Diplomat error: Lowering error in Foo::diplo_option_box
> found DiplomatOption<Box<T>>, please use Option<Box<T>> (DiplomatOption is for primitives, structs, and enums)
