core/src/hir/snapshots/diplomat_core__hir__type_context__tests__option_invalid.snap
---
source: core/src/hir/type_context.rs
expression: output
---
Diplomat error: Lowering error in Foo
> In field field: Safety issue: Option<u8> is FFI-unsafe, consider using DiplomatOption<u8>
Diplomat error: Lowering error in Foo
> Found Option<T> for primitive T in a struct field, please use DiplomatOption<T>
Diplomat error: Lowering error in Foo::do_thing
> found Option<T> in input, where T isn't a reference but Option<T> in inputs requires that T is a reference to an opaque. T = Option<u16>
Diplomat error: Lowering error in Foo::do_thing2
> Results can only appear as the top-level return type of methods
