core/src/hir/snapshots/diplomat_core__hir__type_context__tests__required_implied_bounds.snap
---
source: core/src/hir/type_context.rs
expression: output
---
Diplomat error: Lowering error in Opaque::use_foo
> Method should explicitly include this lifetime bound from param foo: 'y: 'x (comes from source type's 'b: 'a)

Diplomat error: Lowering error in Opaque::use_foo
> Method should explicitly include this lifetime bound from param foo: 'z: 'y (comes from source type's 'c: 'b)

Diplomat error: Lowering error in Opaque::return_foo
> Method should explicitly include this lifetime bound from return type: 'y: 'x (comes from source type's 'b: 'a)

Diplomat error: Lowering error in Opaque::return_foo
> Method should explicitly include this lifetime bound from return type: 'z: 'y (comes from source type's 'c: 'b)

Diplomat error: Lowering error in Opaque::return_result_foo
> Method should explicitly include this lifetime bound from return type: 'y: 'x (comes from source type's 'b: 'a)

Diplomat error: Lowering error in Opaque::return_result_foo
> Method should explicitly include this lifetime bound from return type: 'z: 'y (comes from source type's 'c: 'b)
